--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@ body {
   margin: 0;
   padding: 1%;
   height: 95vh;
+  font-family: "Montserrat", sans-serif;
 }
 main {
-  min-width: 900px;
+  min-width: 1200px;
   width: 100%;
   height: 100%;
   margin: 0 auto;
@@ -36,6 +37,8 @@ main {
   width: 30%;
   color: whitesmoke;
   padding: 1rem;
+  max-height: 100%;
+  overflow-y: scroll;
 }
 header {
   display: flex;
@@ -141,7 +144,7 @@ header {
   display: flex;
 }
 .left-flex {
-  width: 30%;
+  width: 35%;
   font-weight: 600;
   margin-top: 5px;
   margin-bottom: 5px;
